o) Cleaned up modules API. Old modules won't work anymore
o) Remove general::burst_away configuration directive. AWAY bursts are now
   controlled via connect::flags explicitly
o) Introduced new logging subsystem including log rotation based on
   file sizes
o) Added support for remote D-lines
o) Added usermode +H which is basically a replacement for the hidden_admin and
   hidden_oper operator flags. With usermode +H, irc operator status can now
   be hidden even on remote servers
o) The servlink program has been removed. ircd-hybrid can now make use of SSL/TLS
   for inter-server communication.
   NOTE: compressed server links are of course still available, but a SSL/TLS
   connection is required, as compression is now handled via the OpenSSL library
o) Oper login IDs are no longer limited to NICKLEN*2

--------------------------------------------------------------------------------

NOTE: This is still BETA code.  Run it at your own risk.  By running this
 code you assume FULL responsibility for any problems it may cause.  We do
 NOT recommend that you run BETA code on production IRC networks such
 as EFnet.

BUGS: Major bugs in this release are listed in BUGS

BUG REPORTS: If you run this code and encounter problems, you must report
 the bug by EMAIL to bugs@ircd-hybrid.org
 Please include a gdb backtrace and a copy of your config.h and
 ircd.conf with any report (with passwords and other sensitive
 information masked).

DISCUSSION: There is a mailing list for discussion of hybrid issues,
 including betas.  To subscribe, use this link:
    https://lists.ircd-hybrid.org/mailman/listinfo/hybrid
 This is the proper place to discuss new features, bugs, etc.  Posting here
 is much more likely to get something done than ranting on #TZ.

Questions/comments directed to bugs@ircd-hybrid.org

Other files recommended for reading: BUGS, README, INSTALL

--------------------------------------------------------------------------------
$Id$