@@ -774,12 +774,6 @@ channel {
 	knock_delay_channel = 1 minute;
 
 	/*
-	 * burst_topicwho: enable sending of who set topic on topicburst
-	 * default is yes
-	 */
-	burst_topicwho = yes;
-
-	/*
 	 * max_chans_per_user: The maximum number of channels a user can
 	 * join/be on.
 	 */
