@@ -256,7 +256,6 @@ channel {
 	use_knock = yes;
 	knock_delay = 5 minutes;
 	knock_delay_channel = 1 minute;
-	burst_topicwho = yes;
 	max_chans_per_user = 15;
 	quiet_on_ban = yes;
 	max_bans = 25;
